--- a/MemAlerts.Client/Views/LoginWindow.xaml
+++ b/MemAlerts.Client/Views/LoginWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
         Title="MemAlerts - Вход"
-        Height="460"
+        Height="520"
         Width="420"
         Background="{DynamicResource MaterialDesignPaper}"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
@@ -58,9 +58,15 @@
                            HorizontalAlignment="Center"
                            Margin="0 0 0 25" />
                 
+                <TextBox x:Name="LoginTextBox"
+                         Text="{Binding Login, UpdateSourceTrigger=PropertyChanged}"
+                         materialDesign:HintAssist.Hint="Логин или Email"
+                         Style="{StaticResource MaterialDesignOutlinedTextBox}"
+                         Margin="0 0 0 16" />
+
                 <TextBox x:Name="EmailTextBox"
                          Text="{Binding Email, UpdateSourceTrigger=PropertyChanged}"
-                         materialDesign:HintAssist.Hint="Email"
+                         materialDesign:HintAssist.Hint="Email (для регистрации)"
                          Style="{StaticResource MaterialDesignOutlinedTextBox}"
                          Margin="0 0 0 16" />
 
