--- a/MemAlerts.Client/Alerts/AlertOverlayWindow.xaml
+++ b/MemAlerts.Client/Alerts/AlertOverlayWindow.xaml
@@ -3,6 +3,8 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:wv2="clr-namespace:Microsoft.Web.WebView2.Wpf;assembly=Microsoft.Web.WebView2.Wpf"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
         SizeToContent="WidthAndHeight"
         WindowStyle="None"
@@ -20,41 +22,107 @@
             <DropShadowEffect BlurRadius="32" ShadowDepth="6" Opacity="0.6" Color="#000000" Direction="315" />
         </Border.Effect>
         
-        <!-- Градиентная рамка -->
         <Border CornerRadius="16"
                 Padding="2"
                 Background="{StaticResource PrimaryGradient}">
             <Border Background="{StaticResource BackgroundCard}"
                     CornerRadius="14">
                 <StackPanel>
-                    <!-- Заголовок с градиентом -->
-                    <Border Background="{StaticResource PrimaryGradient}"
-                            CornerRadius="10"
-                            Padding="12,10"
-                            Margin="0,0,0,12">
-                        <TextBlock Text="{Binding Video.Title}"
-                                   FontWeight="Bold"
-                                   Foreground="White"
-                                   FontSize="16"
-                                   TextAlignment="Center"
-                                   TextTrimming="CharacterEllipsis"/>
-                    </Border>
+                    <Grid Margin="0,0,0,12">
+                        <Border Background="{StaticResource PrimaryGradient}"
+                                CornerRadius="10"
+                                Padding="12,10">
+                            <TextBlock Text="{Binding Video.Title}"
+                                       FontWeight="Bold"
+                                       Foreground="White"
+                                       FontSize="16"
+                                       TextAlignment="Center"
+                                       TextTrimming="CharacterEllipsis"
+                                       Margin="24,0"/>
+                        </Border>
+                        
+                        <Button HorizontalAlignment="Right"
+                                VerticalAlignment="Center"
+                                Margin="0,0,8,0"
+                                Width="24"
+                                Height="24"
+                                Padding="0"
+                                Background="Transparent"
+                                BorderBrush="Transparent"
+                                Click="CloseButton_Click"
+                                Cursor="Hand">
+                            <Button.Style>
+                                <Style TargetType="Button">
+                                    <Setter Property="Template">
+                                        <Setter.Value>
+                                            <ControlTemplate TargetType="Button">
+                                                <Border Background="{TemplateBinding Background}" CornerRadius="12">
+                                                    <Path Data="M6,6 L18,18 M6,18 L18,6"
+                                                          Stroke="White"
+                                                          StrokeThickness="2"
+                                                          Stretch="Uniform"
+                                                          Margin="6"/>
+                                                </Border>
+                                            </ControlTemplate>
+                                        </Setter.Value>
+                                    </Setter>
+                                    <Style.Triggers>
+                                        <Trigger Property="IsMouseOver" Value="True">
+                                            <Setter Property="Background" Value="#33FFFFFF"/>
+                                        </Trigger>
+                                    </Style.Triggers>
+                                </Style>
+                            </Button.Style>
+                        </Button>
+                    </Grid>
                     
-                    <!-- Видео -->
-                    <Border Background="{StaticResource BackgroundDark}"
-                            CornerRadius="12"
-                            BorderBrush="{StaticResource BorderColor}"
-                            BorderThickness="1"
-                            Padding="2"
-                            MaxWidth="640"
-                            MaxHeight="360">
-                        <MediaElement x:Name="OverlayPlayer"
-                                      LoadedBehavior="Manual"
-                                      UnloadedBehavior="Manual"
-                                      Stretch="Uniform"
-                                      MediaEnded="OverlayPlayer_OnMediaEnded"
-                                      MediaOpened="OverlayPlayer_OnMediaOpened" />
-                    </Border>
+                    <StackPanel>
+                        <Border x:Name="VideoContainer"
+                                Background="{StaticResource BackgroundDark}"
+                                CornerRadius="12"
+                                BorderBrush="{StaticResource BorderColor}"
+                                BorderThickness="1"
+                                Padding="2"
+                                Width="640"
+                                Height="360">
+                            <Grid>
+                                <MediaElement x:Name="OverlayPlayer"
+                                              LoadedBehavior="Manual"
+                                              UnloadedBehavior="Manual"
+                                              Stretch="Uniform"
+                                              MediaEnded="OverlayPlayer_OnMediaEnded"
+                                              MediaOpened="OverlayPlayer_OnMediaOpened"
+                                              MediaFailed="OverlayPlayer_OnMediaFailed" />
+                                              
+                                <wv2:WebView2 x:Name="OverlayWebView"
+                                              Visibility="Collapsed"/>
+                            </Grid>
+                        </Border>
+                        
+                        <Border Background="{StaticResource PrimaryGradient}" 
+                                CornerRadius="0,0,12,12" 
+                                Margin="12,-8,12,0" 
+                                Padding="12,8,12,4"
+                                Panel.ZIndex="-1">
+                            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                                <Button Style="{StaticResource MaterialDesignIconForegroundButton}"
+                                        Foreground="White"
+                                        Click="MuteButton_Click"
+                                        Width="24" Height="24"
+                                        Padding="0"
+                                        Margin="0,0,8,0">
+                                    <materialDesign:PackIcon x:Name="MuteIcon" Kind="VolumeHigh" Width="16" Height="16"/>
+                                </Button>
+                                <Slider x:Name="OverlayVolumeSlider"
+                                        Width="120"
+                                        Minimum="0" Maximum="100" Value="100"
+                                        VerticalAlignment="Center"
+                                        ValueChanged="VolumeSlider_ValueChanged"
+                                        IsMoveToPointEnabled="True"
+                                        Style="{StaticResource MaterialDesignSlider}"/>
+                            </StackPanel>
+                        </Border>
+                    </StackPanel>
                 </StackPanel>
             </Border>
         </Border>
