--- a/MemAlerts.Client/MainWindow.xaml
+++ b/MemAlerts.Client/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="MemAlerts.Client.MainWindow"
+<Window x:Class="MemAlerts.Client.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -45,7 +45,14 @@
                                   materialDesign:ElevationAssist.Elevation="Dp4"
                                   MouseLeftButtonDown="ColorZone_MouseLeftButtonDown">
             <DockPanel>
-                <StackPanel Orientation="Horizontal" DockPanel.Dock="Left">
+                <StackPanel Orientation="Horizontal" DockPanel.Dock="Left" VerticalAlignment="Center">
+                    <Button Style="{StaticResource MaterialDesignIconForegroundButton}"
+                            Width="36" Height="36"
+                            Margin="0,0,12,0"
+                            ToolTip="Меню"
+                            Click="MenuButton_Click">
+                        <materialDesign:PackIcon Kind="Menu" Width="24" Height="24" />
+                    </Button>
                     <materialDesign:PackIcon Kind="YoutubeTv" Width="32" Height="32" VerticalAlignment="Center" Margin="0 0 12 0"/>
                     <TextBlock Text="MemAlerts" FontSize="22" FontWeight="Bold" VerticalAlignment="Center" />
                 </StackPanel>
@@ -433,5 +440,92 @@
                 <TextBlock Text="{Binding StatusMessage}" FontSize="11" />
             </DockPanel>
         </materialDesign:ColorZone>
+
+        <Grid x:Name="SideMenuOverlay"
+              Grid.RowSpan="3"
+              Visibility="Collapsed"
+              Panel.ZIndex="50">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+
+            <Border x:Name="SideMenuPanel"
+                    Width="320"
+                    Background="{DynamicResource MaterialDesignPaper}"
+                    materialDesign:ElevationAssist.Elevation="Dp6">
+                <Border.RenderTransform>
+                    <TranslateTransform x:Name="SideMenuTransform" X="-320"/>
+                </Border.RenderTransform>
+
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+
+                    <Grid Grid.Row="0" Margin="16,16,16,8">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="Auto"/>
+                        </Grid.ColumnDefinitions>
+
+                        <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+                            <materialDesign:PackIcon Kind="Menu" Width="20" Height="20" Margin="0,0,12,0"/>
+                            <TextBlock Text="Меню" FontSize="20" FontWeight="Bold"/>
+                        </StackPanel>
+
+                        <Button Grid.Column="1"
+                                Style="{StaticResource MaterialDesignIconButton}"
+                                Width="32" Height="32"
+                                ToolTip="Закрыть меню"
+                                Click="CloseMenuButton_Click">
+                            <materialDesign:PackIcon Kind="Close" Width="18" Height="18"/>
+                        </Button>
+                    </Grid>
+
+                    <StackPanel Grid.Row="1" Margin="16,0,16,16">
+                        <TextBlock Text="Управление" FontWeight="Bold" Opacity="0.6" Margin="0,0,0,12"/>
+
+                        <Button Style="{StaticResource MaterialDesignOutlinedButton}"
+                                Command="{Binding ClearCacheCommand}"
+                                Height="54"
+                                Margin="0,0,0,12">
+                            <StackPanel Orientation="Horizontal">
+                                <materialDesign:PackIcon Kind="DeleteSweep" Width="22" Height="22" Margin="0,0,12,0"/>
+                                <StackPanel>
+                                    <TextBlock Text="Очистить кэш" FontWeight="SemiBold"/>
+                                    <TextBlock Text="Удалить загруженные видео" FontSize="11" Opacity="0.7"/>
+                                </StackPanel>
+                            </StackPanel>
+                        </Button>
+
+                        <Button Style="{StaticResource MaterialDesignRaisedButton}"
+                                Height="54"
+                                Click="LogoutButton_Click">
+                            <StackPanel Orientation="Horizontal">
+                                <materialDesign:PackIcon Kind="LogoutVariant" Width="22" Height="22" Margin="0,0,12,0"/>
+                                <StackPanel>
+                                    <TextBlock Text="Выйти" FontWeight="SemiBold"/>
+                                    <TextBlock Text="Сменить пользователя" FontSize="11" Opacity="0.7"/>
+                                </StackPanel>
+                            </StackPanel>
+                        </Button>
+                    </StackPanel>
+
+                    <TextBlock Grid.Row="2"
+                               Margin="16,0,16,24"
+                               Text="{Binding ApplicationVersion}"
+                               FontSize="12"
+                               Opacity="0.6"/>
+                </Grid>
+            </Border>
+
+            <Border x:Name="SideMenuBackdrop"
+                    Grid.Column="1"
+                    Background="#80000000"
+                    MouseDown="MenuOverlayBackground_MouseDown"/>
+        </Grid>
     </Grid>
 </Window>
