--- a/MemAlerts.Client/Views/FriendsWindow.xaml
+++ b/MemAlerts.Client/Views/FriendsWindow.xaml
@@ -9,8 +9,8 @@
         Title="MemAlerts - Друзья"
         Height="600"
         Width="500"
-        Background="{DynamicResource MaterialDesignPaper}"
-        TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+        Background="{DynamicResource AppBackgroundBrush}"
+        TextElement.Foreground="{DynamicResource PrimaryTextBrush}"
         WindowStartupLocation="CenterOwner"
         WindowStyle="None"
         ResizeMode="CanResize">
@@ -30,10 +30,12 @@
         </Grid.RowDefinitions>
 
         <!-- Header -->
-        <materialDesign:ColorZone Mode="PrimaryMid" 
-                                  Padding="16" 
-                                  materialDesign:ElevationAssist.Elevation="Dp4"
-                                  MouseLeftButtonDown="ColorZone_MouseLeftButtonDown">
+        <Border Grid.Row="0"
+                Background="{DynamicResource PrimaryGradient}"
+                Padding="16"
+                CornerRadius="14"
+                Margin="12"
+                MouseLeftButtonDown="ColorZone_MouseLeftButtonDown">
             <Grid>
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
                     <materialDesign:PackIcon Kind="AccountMultiple" Width="24" Height="24" VerticalAlignment="Center" Margin="0 0 8 0"/>
@@ -49,14 +51,20 @@
                     <materialDesign:PackIcon Kind="WindowClose" Width="20" Height="20"/>
                 </Button>
             </Grid>
-        </materialDesign:ColorZone>
+        </Border>
 
         <!-- Content with Tabs -->
-        <TabControl Grid.Row="1" materialDesign:ColorZoneAssist.Mode="PrimaryMid">
+        <TabControl Grid.Row="1"
+                    Margin="12"
+                    Background="{DynamicResource SurfaceBrush}"
+                    BorderBrush="{DynamicResource BorderColor}"
+                    BorderThickness="1"
+                    Padding="12">
             <!-- Friends Tab -->
             <TabItem>
                 <TabItem.Header>
-                    <TextBlock Text="{Binding FriendsCount, StringFormat=Друзья ({0})}" />
+                    <TextBlock Text="{Binding FriendsCount, StringFormat=Друзья ({0})}"
+                               Foreground="{DynamicResource PrimaryTextBrush}" />
                 </TabItem.Header>
                 <Grid Margin="8">
                     <Grid.RowDefinitions>
@@ -105,7 +113,8 @@
             <!-- Pending Requests Tab -->
             <TabItem>
                 <TabItem.Header>
-                    <TextBlock Text="{Binding PendingRequestsCount, StringFormat=Запросы ({0})}" />
+                    <TextBlock Text="{Binding PendingRequestsCount, StringFormat=Запросы ({0})}"
+                               Foreground="{DynamicResource PrimaryTextBrush}" />
                 </TabItem.Header>
                 <Grid Margin="8">
                     <ListView ItemsSource="{Binding PendingRequests}" HorizontalContentAlignment="Stretch">
@@ -159,7 +168,7 @@
                     <TextBox Grid.Row="0"
                              Text="{Binding SearchQuery, UpdateSourceTrigger=PropertyChanged}"
                              materialDesign:HintAssist.Hint="Поиск по логину или email..."
-                             Style="{StaticResource MaterialDesignOutlinedTextBox}"
+                             Style="{StaticResource AppOutlinedTextBox}"
                              Margin="0,0,0,8">
                         <TextBox.InputBindings>
                             <KeyBinding Key="Enter" Command="{Binding SearchUsersCommand}" />
@@ -201,9 +210,15 @@
         </TabControl>
 
         <!-- Status Bar -->
-        <materialDesign:ColorZone Grid.Row="2" Mode="Standard" Padding="12,4">
-            <TextBlock Text="{Binding StatusMessage}" FontSize="11" />
-        </materialDesign:ColorZone>
+        <Border Grid.Row="2"
+                Margin="12"
+                Padding="12,6"
+                CornerRadius="10"
+                Background="{DynamicResource ToolbarBrush}">
+            <TextBlock Text="{Binding StatusMessage}"
+                       FontSize="11"
+                       Foreground="{DynamicResource SecondaryTextBrush}" />
+        </Border>
     </Grid>
 </Window>
 
